fix label on mobile v2

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -14,7 +14,9 @@ body {
 .Main > ul {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style: none;    
+  position: relative;
+  height: inherit;
 }
 
 .Main__slide {
